--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,9 @@
       </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>3.2.2</version>
+        <configuration>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -99,12 +101,14 @@
       <version>2.0.3</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-servlet-api -->
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.10.2</version>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-servlet-api</artifactId>
+      <version>9.0.56</version>
     </dependency>
+
+
 
 
   </dependencies>
