--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <version>2.10.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
 
   </dependencies>
 </project>
