--- a/src/main/webapp/WEB-INF/properties/errorMsg.properties
+++ b/src/main/webapp/WEB-INF/properties/errorMsg.properties
@@ -36,3 +36,7 @@ Pattern.modifyMemberBean.user_pw=영문 대/소문자 및 숫자(0-9) 만 허용
 Pattern.modifyMemberBean.user_pw2=영문 대/소문자 및 숫자(0-9) 만 허용됩니다.
 NotEquals.modifyMemberBean.user_pw=비밀번호가 일치하지 않습니다. 다시 확인하세요.
 NotEquals.modifyMemberBean.user_pw2=비밀번호가 일치하지 않습니다. 다시 확인하세요.
+
+NotBlank.writeContentBean.content_subject= 제목이 없습니다. 제목은 반드시 입력해야 합니다.
+NotBlank.writeContentBean.content_text= 내용이 없습니다. 내용은 반드시 입력해야 합니다.
+
