--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,54 +5,68 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 						http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
 
-  <!-- 현재 웹 애플리케이션에서 받아들이는 모든 요청에 대해 appServlet이라는 이름으로 정의되어 있는 서블릿을 사용하겠다. -->
-  <servlet-mapping>
-    <servlet-name>appServlet</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
+    <!-- Java 방식의 SpringConfigClass extends AbstractAnnotationConfigDispatcherServletInitializer 와 같은 역할. -->
 
-  <!-- 요청 정보를 분석해서 컨트롤러를 선택하는 서블릿을 지정한다. -->
-  <servlet>
-    <servlet-name>appServlet</servlet-name>
-    <!-- Spring MVC에서 제공하고 있는 기본 서블릿을 지정한다. -->
-    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-    <!-- Spring MVC 설정을 위한 xml 파일을 지정한다. -->
-    <init-param>
-      <param-name>contextConfigLocation</param-name>
-      <param-value>/WEB-INF/config/servlet-context.xml</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
+    <!-- 현재 웹 애플리케이션에서 받아들이는 모든 요청에 대해 appServlet 이라는 이름으로 정의되어 있는 서블릿을 사용하겠다. -->
+    <servlet-mapping>
+        <servlet-name>appServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
-  <!-- Bean을 정의할 xml 파일을 지정한다. -->
-  <context-param>
-    <param-name>contextConfigLocation</param-name>
-    <param-value>/WEB-INF/config/root-context.xml</param-value>
-  </context-param>
+    <!-- 요청 정보를 분석해서 컨트롤러를 선택하는 서블릿을 지정한다. -->
+    <servlet>
+        <servlet-name>appServlet</servlet-name>
+        <!-- Spring MVC에서 제공하고 있는 기본 서블릿을 지정한다. -->
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <!-- Spring MVC 설정을 위한 xml 파일을 지정한다. -->
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/config/servlet-context.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
 
-  <!-- 리스너설정 -->
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
+        <!--
+        1. 클라이언트가 보낸 파일을 임시로 저장할 임시파일의 경로. 입력하지 않으면, apache tomcat 에서 정한 임시파일 경로를 이용하게 된다.
+		2. upload 하는 파일의 최대용량(bite 단위로 넣어야 한다. 1kb 는 1024 bite, 1mb 는 1024kb, 1gb 는 1024mb). 이하는 50mb로 지정.
+		3. file 데이터 포함한 전체 요청용량(bite 단위로 넣어야 한다. 1kb 는 1024 bite, 1mb 는 1024kb, 1gb 는 1024mb). 이하는 50mb로 지정.
+		4. file 의 인계값. 0 으로 설정하면, 자동으로 데이터를 받아 설정하게 된다.
+		-->
+        <multipart-config>
+            <max-file-size>52428800</max-file-size>
+            <max-request-size>524288000</max-request-size>
+            <file-size-threshold>0</file-size-threshold>
+        </multipart-config>
+    </servlet>
 
-  <!-- 파라미터 인코딩 필터 설정 -->
-  <filter>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-    <init-param>
-      <param-name>forceEncoding</param-name>
-      <param-value>true</param-value>
-    </init-param>
-  </filter>
+    <!-- Bean을 정의할 xml 파일을 지정한다. -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/config/root-context.xml</param-value>
+    </context-param>
 
-  <filter-mapping>
-    <filter-name>encodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+    <!-- 리스너설정 -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <!-- 파라미터 인코딩 필터 설정 -->
+    <filter>
+        <filter-name>encodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
 
 
