--- a/src/main/webapp/WEB-INF/properties/option.properties
+++ b/src/main/webapp/WEB-INF/properties/option.properties
@@ -1,1 +1,7 @@
 path.upload=C:/JAVA_LAB/SpringMVCBoardXML/target/SpringMVCBoardXML-0.0.1-SNAPSHOT/resources/upload
+
+# page.listcnt : 페이지 당 글 몇개를 보일지.
+# page.pagination : 페이징 번호 최대 개수를 결정.
+
+page.listcnt = 10
+page.paginationcnt = 10
